@@ -7,6 +7,7 @@ import com.dotcms.content.elasticsearch.ESQueryCache;
 import com.dotcms.content.elasticsearch.util.RestHighLevelClientProvider;
 import com.dotcms.contenttype.business.StoryBlockReferenceResult;
 import com.dotcms.contenttype.model.type.BaseContentType;
+import com.dotcms.contenttype.model.type.ContentType;
 import com.dotcms.enterprise.license.LicenseManager;
 import com.dotcms.exception.ExceptionUtil;
 import com.dotcms.notifications.bean.NotificationLevel;
@@ -156,7 +157,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
 
     private static final String[] UPSERT_EXTRA_COLUMNS = {"show_on_menu", "title", "mod_date", "mod_user",
             "sort_order", "friendly_name", "structure_inode", "disabled_wysiwyg", "identifier",
-            "language_id", "contentlet_as_json",
+            "language_id", "contentlet_as_json", "variant_id",
             "date1", "date2", "date3", "date4", "date5", "date6", "date7", "date8",
             "date9", "date10", "date11", "date12", "date13", "date14", "date15", "date16", "date17",
             "date18", "date19", "date20", "date21", "date22", "date23", "date24", "date25", "text1",
@@ -181,7 +182,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
 
     private static final String[] UPSERT_EXTRA_COLUMNS_ORACLE = {"show_on_menu", "title", "mod_date", "mod_user",
             "sort_order", "friendly_name", "structure_inode", "disabled_wysiwyg", "identifier",
-            "language_id", "contentlet_as_json",
+            "language_id", "contentlet_as_json", "variant_id",
             "date1", "date2", "date3", "date4", "date5", "date6", "date7", "date8",
             "date9", "date10", "date11", "date12", "date13", "date14", "date15", "date16", "date17",
             "date18", "date19", "date20", "date21", "date22", "date23", "date24", "date25", "text1",
@@ -207,7 +208,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
 
     private static final String[] UPSERT_EXTRA_COLUMNS_MYSQL = {"show_on_menu", "title", "mod_date", "mod_user",
             "sort_order", "friendly_name", "structure_inode", "disabled_wysiwyg", "identifier",
-            "language_id", "contentlet_as_json",
+            "language_id", "contentlet_as_json", "variant_id",
             "date1", "date2", "date3", "date4", "date5", "date6", "date7", "date8",
             "date9", "date10", "date11", "date12", "date13", "date14", "date15", "date16", "date17",
             "date18", "date19", "date20", "date21", "date22", "date23", "date24", "date25", "text1",
@@ -388,7 +389,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
             Logger.error(ESContentFactoryImpl.class,e.getMessage(),e);
             throw new DotDataException(e.getMessage(), e);
         }
-        List<Map<String, Serializable>> res = new ArrayList<Map<String,Serializable>>();
+        List<Map<String, Serializable>> res = new ArrayList<>();
         Criteria c = query.getCriteria();
         StringBuilder bob = new StringBuilder();
         List<Object> params = null;
@@ -420,7 +421,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
         }
         bob.append(" FROM contentlet WHERE structure_inode = '" + structureInode + "'");
         if(c != null){
-            params = new ArrayList<Object>();
+            params = new ArrayList<>();
             if(c instanceof SimpleCriteria){
                 bob.append(" AND ");
                 String att = velVarfieldsMap.get(((SimpleCriteria) c).getAttribute()) != null ? velVarfieldsMap.get(((SimpleCriteria) c).getAttribute()).getFieldContentlet() : ((SimpleCriteria) c).getAttribute();
@@ -471,15 +472,15 @@ public class ESContentFactoryImpl extends ContentletFactory {
         }
         List<Map<String, String>> dbrows = dc.loadResults();
         for (Map<String, String> row : dbrows) {
-            Map<String, Serializable> m = new HashMap<String, Serializable>();
+            Map<String, Serializable> m = new HashMap<>();
             for (String colkey : row.keySet()) {
                 if(colkey.startsWith("bool")){
                     if(fieldsMap.get(colkey) != null){
-                        m.put(fieldsMap.get(colkey).getVelocityVarName(), new Boolean(row.get(colkey)));
+                        m.put(fieldsMap.get(colkey).getVelocityVarName(), Boolean.valueOf(row.get(colkey)));
                     }
                 }else if(colkey.startsWith("float")){
                     if(fieldsMap.get(colkey) != null){
-                        m.put(fieldsMap.get(colkey).getVelocityVarName(), new Float(row.get(colkey)));
+                        m.put(fieldsMap.get(colkey).getVelocityVarName(), Float.valueOf(row.get(colkey)));
                     }
                 }else if(colkey.startsWith("date")){
                     if(fieldsMap.get(colkey) != null){
@@ -487,7 +488,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
                     }
                 }else if(colkey.startsWith("integer")){
                     if(fieldsMap.get(colkey) != null){
-                        m.put(fieldsMap.get(colkey).getVelocityVarName(), new Integer(row.get(colkey)));
+                        m.put(fieldsMap.get(colkey).getVelocityVarName(), Integer.valueOf(row.get(colkey)));
                     }
                 }else if(colkey.startsWith("text")){
                     if(fieldsMap.get(colkey) != null){
@@ -495,11 +496,11 @@ public class ESContentFactoryImpl extends ContentletFactory {
                     }
                 }else if(colkey.equals("working")){
                     if(fieldsMap.get(colkey) != null){
-                        m.put(fieldsMap.get(colkey).getVelocityVarName(), new Boolean(row.get(colkey)));
+                        m.put(fieldsMap.get(colkey).getVelocityVarName(), Boolean.valueOf(row.get(colkey)));
                     }
                 }else if(colkey.startsWith("deleted")){
                     if(fieldsMap.get(colkey) != null){
-                        m.put(fieldsMap.get(colkey).getVelocityVarName(), new Boolean(row.get(colkey)));
+                        m.put(fieldsMap.get(colkey).getVelocityVarName(), Boolean.valueOf(row.get(colkey)));
                     }
                 }else{
                     m.put(colkey, row.get(colkey));
@@ -582,7 +583,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
             //Another group of 500 contentles ids is ready...
             if ( inodes.size() >= maxRecords ) {
                 deleteTreesForInodes( inodes );
-                inodes = new ArrayList<String>();
+                inodes = new ArrayList<>();
             }
         }
 
@@ -1006,7 +1007,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
         DotPreconditions.notNull(variant, () -> "Variant cannot be null");
 
         if (APILocator.getContentletJsonAPI().isJsonSupportedDatabase()){
-            return findContentlets(getContantletInodesFromJsonField(identifier, variant).stream()
+            return findContentlets(getContentletInodesFromJsonField(identifier, variant).stream()
                     .map(map -> map.get("inode").toString())
                     .collect(Collectors.toList()));
         } else {
@@ -1014,22 +1015,14 @@ public class ESContentFactoryImpl extends ContentletFactory {
         }
     }
 
-    private static Collection<Map<String, Object>> getContantletInodesFromJsonField
+    private static Collection<Map<String, Object>> getContentletInodesFromJsonField
             (final Identifier identifier, final Variant variant) throws DotDataException {
-        final String columnName = getJsonVariantIdColumnName();
 
         return new DotConnect()
-                .setSQL(String.format(
-                        "select inode from contentlet where identifier = ? and %s = ?",
-                        columnName))
+                .setSQL("select inode from contentlet where identifier = ? and variant_id = ?  order by mod_date desc")
                 .addParam(identifier.getId())
                 .addParam(variant.name())
                 .loadResults();
-    }
-
-    private static String getJsonVariantIdColumnName() {
-        return isPostgres() ? ContentletJsonAPI.CONTENTLET_AS_JSON + "->>'variantId'" :
-                "JSON_VALUE(" + ContentletJsonAPI.CONTENTLET_AS_JSON + ", '$.variantId')";
     }
 
     @Override
@@ -1060,7 +1053,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
             dc.setMaxRows(maxResults);
         }
         List<Map<String,Object>> list=dc.loadObjectResults();
-        ArrayList<String> inodes=new ArrayList<String>(list.size());
+        ArrayList<String> inodes=new ArrayList<>(list.size());
         for(Map<String,Object> r : list)
             inodes.add(r.get("inode").toString());
         return findContentlets(inodes);
@@ -1118,6 +1111,28 @@ public class ESContentFactoryImpl extends ContentletFactory {
                 .add(String.valueOf(contentlet.getInode()), contentlet));
 
         return contentlets;
+    }
+
+    @Override
+    public int countByType(ContentType contentType, boolean includeAllVersion){
+        final DotConnect dotConnect = new DotConnect();
+        if(includeAllVersion){
+            dotConnect.setSQL(" select count(c.inode) as x \n" +
+                    " from contentlet c \n" +
+                    " where c.structure_inode =  ? ");
+        } else {
+           dotConnect.setSQL(" select count(c.inode) as x\n" +
+                   " from contentlet c \n" +
+                   " join structure s \n" +
+                   " on c.structure_inode  = s.inode \n" +
+                   " join contentlet_version_info cvi\n" +
+                   " on cvi.identifier = c.identifier and cvi.working_inode = c.inode  \n" +
+                   " join inode i  \n" +
+                   " on c.inode = i.inode \n" +
+                   " where s.inode = ? \n ");
+        }
+        dotConnect.addParam(contentType.inode());
+        return dotConnect.getInt("x");
     }
 
 	@Override
@@ -2186,7 +2201,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
             inode = UUIDGenerator.generateUuid();
         }
 
-        if (!findInDb(inode).isPresent()) {
+        if (findInDb(inode).isEmpty()) {
             final UpsertCommand upsertInodeCommand = UpsertCommandFactory.getUpsertCommand();
             final SimpleMapAppContext replacements = new SimpleMapAppContext();
 
@@ -2227,7 +2242,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
         upsertValues.add(name);
         upsertValues.add(new Timestamp(contentlet.getModDate().getTime()));
         upsertValues.add(contentlet.getModUser());
-        upsertValues.add(new Long(contentlet.getSortOrder()).intValue());
+        upsertValues.add(Long.valueOf(contentlet.getSortOrder()).intValue());
 
         //insert friendly name
         upsertValues.add(name);
@@ -2240,6 +2255,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
         upsertValues.add(UtilMethods.isSet(contentlet.getIdentifier())?contentlet.getIdentifier():null);
         upsertValues.add(contentlet.getLanguageId());
         upsertValues.add(jsonContentlet);
+        upsertValues.add(contentlet.getVariantId());
 
         if (APILocator.getContentletJsonAPI().isPersistContentletInColumns()) {
             final Map<String, Object> fieldsMap = getFieldsMap(contentlet);
@@ -2383,7 +2399,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
 	@Override
 	protected List<Contentlet> search(String query, int limit, int offset, String sortBy) throws DotDataException, DotStateException, DotSecurityException {
 	    SearchHits hits = indexSearch(query, limit, offset, sortBy);
-	    List<String> inodes=new ArrayList<String>();
+	    List<String> inodes=new ArrayList<>();
 	    for(SearchHit h : hits)
 	        inodes.add(h.field("inode").getValue().toString());
 	    return findContentlets(inodes);
@@ -2670,7 +2686,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
          */
 		public List<Map<String, String>> getMostViewedContent(String structureInode, Date startDate, Date endDate, User user) throws DotDataException {
 
-			List<Map<String, String>> result = new ArrayList<Map<String, String>>();
+			List<Map<String, String>> result = new ArrayList<>();
 
 			String sql = " select content_ident, sum(num_views) " +
 					" from " +
@@ -2712,7 +2728,7 @@ public class ESContentFactoryImpl extends ContentletFactory {
 	        for(Map<String, String> ident:contentIdentifiers){
 	        	Identifier identifier = identAPI.find(ident.get("content_ident"));
 	        	if(perAPI.doesUserHavePermission(identifier, PermissionAPI.PERMISSION_READ, user)){
-	        		Map<String, String> h = new HashMap<String, String>();
+	        		Map<String, String> h = new HashMap<>();
 	        		h.put("identifier", ident.get("content_ident"));
 	        		h.put("numberOfViews", ident.get("numberOfViews"));
 	        		result.add(h);
